infra/k8s/regis-entity-graph/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: regis-entity-graph
spec:
  selector:
    app: regis-entity-graph
  ports:
    - name: http
      port: 8820
      targetPort: 8820
